--- a/src/Blazor/DestallMaterials.Blazor.Components/Inputs/StringInput.razor.css
+++ b/src/Blazor/DestallMaterials.Blazor.Components/Inputs/StringInput.razor.css
@@ -23,6 +23,8 @@
     border-radius: 4px;
     transition: all 0.2s ease-in-out;
     outline: none;
+    height: 38px;
+    box-sizing: border-box;
 }
 
 .string-input-field:focus {
